# SeasonalWeatherSKSE

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  xmake.lua
cmake/: version.rc.in
src/: Config.cpp  Config.h  MenuUI.cpp  MenuUI.h  RegionScanner.cpp  RegionScanner.h  Season.h  UpdateHook.cpp  UpdateHook.h  WeatherManager.cpp  WeatherManager.h  main.cpp  pch.h
